--- a/final.ipynb
+++ b/final.ipynb
@@ -4,12 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 기계학습(8585) 기말고사 대체 과제\n",
     "### 제품 review 데이터의 감성 분석 \n",
     "\n",
     "---\n",
     "##### 1. 데이터 \n",
-    "학번이 홀수로 끝나기 때문에 `amazon_uk_shoes_products_dataset_2021_12.csv` 데이터 사용\n",
+    "`amazon_uk_shoes_products_dataset_2021_12.csv` 데이터 사용\n",
     "##### 2. 데이터 전처리\n",
     "- 데이터 정리 (노이즈 제거, 결측값 처리 등).\n",
     "- 텍스트 토큰화 및 불용어 제거.\n",
